...
    weak var delegate: WebViewViewControllerDelegate?
    var presenter: WebViewPresenterProtocol?
    
    private var estimatedProgressObservation: NSKeyValueObservation?
    @IBOutlet private var webView: WKWebView! {
        didSet {
            webView.accessibilityIdentifier = "UnsplashWebView"
        }
    }
    @IBOutlet private var progressView: UIProgressView!
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
